Updating cassandra config

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -2,7 +2,7 @@ server.port=8080
 spring.aop.proxy-target-class=true
 spring.cache.ehcache.config=classpath:ehcache.xml
 
-spring.data.cassandra.contact-points=127.0.0.1
+spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.port=9042
 spring.data.cassandra.keyspace-name=my_retail
 
