Updating read me & other documentation

--- a/src/main/resources/application-aws.properties
+++ b/src/main/resources/application-aws.properties
@@ -1,9 +1,14 @@
+spring.aop.proxy-target-class=true
+spring.cache.ehcache.config=classpath:ehcache.xml
+
+spring.data.cassandra.contact-points=localhost
+spring.data.cassandra.port=9042
+spring.data.cassandra.keyspace-name=my_retail
+
 redSky.base.url=http://redsky.target.com
+redSky.product.path=/v2/pdp/tcin/{id}?excludes=taxonomy,price,promotion,bulk_ship,rating_and_review_reviews,rating_and_review_statistics,question_answer_statistics
 redSky.connect.timeout=1000
 redSky.read.timeout=3000
 
-spring.data.cassandra.contact-points=127.0.0.1
-spring.data.cassandra.port=9042
 
-## In Production it will go into system properties
-security.XXXX.clientSecret=9x44bun4fc9b96ugswhhwfe4p6mb3qe6
+security.XXXX.clientSecreret=9x44bun4fc9b96ugswhhwfe4p6mb3qe6
