--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=swagger
+
 server.port=8080
 spring.aop.proxy-target-class=true
 spring.cache.ehcache.config=classpath:ehcache.xml
