Enhanced tests & added spring actuator endpoints

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,11 @@
             <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.cassandra</groupId>
             <artifactId>cassandra-all</artifactId>
